Fix alignment

--- a/subprojects/docs/src/jbake/assets/css/menu.css
+++ b/subprojects/docs/src/jbake/assets/css/menu.css
@@ -141,6 +141,6 @@
 }
 
 li.navigation-twitter a {
-	padding-top: 18px;
-	padding-bottom: 18px;
+	padding-top: 17px;
+	padding-bottom: 17px;
 }
